--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,6 +116,25 @@ header .container .row .main-box .menu-btn .btn a {
 }
 header .container .row .main-box .menu-btn .menu-icon {
   display: none;
+  width: 30px;
+}
+header .container .row .main-box .menu-btn .menu-icon span {
+  display: block;
+  height: 2px;
+  width: 23px;
+  border-radius: 99px;
+  background: #fff;
+  transition: 0.3s ease;
+  transform-origin: left;
+}
+header .container .row .main-box .menu-btn .menu-icon.active span:nth-child(1) {
+  transform: rotate(45deg);
+}
+header .container .row .main-box .menu-btn .menu-icon.active span:nth-child(2) {
+  transform: scale(0);
+}
+header .container .row .main-box .menu-btn .menu-icon.active span:nth-child(3) {
+  transform: rotate(-45deg);
 }
 
 .slider-section {
@@ -706,17 +725,14 @@ header .container .row .main-box .menu-btn .menu-icon {
   }
 }
 .pulse:nth-child(1) {
-  -webkit-animation: pulses 2s infinite 0.3s;
   animation: pulses 2s infinite;
 }
 
 .pulse:nth-child(2) {
-  -webkit-animation: pulses 2s infinite 0.3s;
   animation: pulses 2s infinite 0.3s;
 }
 
 .pulse:nth-child(3) {
-  -webkit-animation: pulses 2s infinite 0.3s;
   animation: pulses 2s infinite 0.6s;
 }
 
@@ -737,8 +753,6 @@ header .container .row .main-box .menu-btn .menu-icon {
   width: 70px;
   line-height: 70px;
   cursor: pointer;
-  -webkit-transition: all 0.2s;
-  -moz-transition: all 0.2s;
   transition: all 0.2s;
 }
 .watsapp-join a {
@@ -1088,7 +1102,11 @@ footer .sub-footer-curve p {
     opacity: 1;
   }
   header .container .row .main-box .menu-btn .menu-icon {
-    display: block;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 6px;
+    align-items: center;
+    justify-content: center;
     color: white;
     font-size: 20px;
   }
