--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -1,146 +1,8 @@
-@import url("https://fonts.googleapis.com/css?family=Raleway:400,400i,700");
-* {
-  margin: 0px;
-  padding: 0px;
-  box-sizing: border-box;
-  font-family: "Alegreya", sans-serif;
-  scroll-behavior: smooth;
-}
-
-body {
-  overflow-x: hidden;
-}
-
-.container {
-  max-width: 1400px;
-  margin: 0px auto;
-}
-
-.flex {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.justify-center {
-  justify-content: center;
-}
-
-.justify-between {
-  justify-content: space-between;
-}
-
-.justify-evenly {
-  justify-content: space-evenly;
-}
-
-.align-center {
-  align-items: center;
-}
-
-ol,
-li {
-  list-style-type: none;
-}
-
-ul {
-  margin: 0px !important;
-}
-
-a {
-  color: black;
-  text-decoration: none;
-}
-
-p,
-h2 {
-  margin: 0px !important;
-}
-
-h2 {
-  text-transform: capitalize;
-}
-
-.no-scroll {
-  overflow: hidden;
-}
-
-header {
-  position: relative;
-  z-index: 1;
-  padding-top: 40px;
-}
-header .container .row .main-box {
-  padding: 0px 15px;
-}
-header .container .row .main-box .logo {
-  width: 150px;
-}
-header .container .row .main-box .logo a {
-  display: block;
-  width: 100%;
-}
-header .container .row .main-box .logo a img {
-  width: 100%;
-}
-header .container .row .main-box .menu-btn {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-}
-header .container .row .main-box .menu-btn .menubar ul {
-  display: flex;
-  flex-wrap: wrap;
-}
-header .container .row .main-box .menu-btn .menubar ul li {
-  cursor: pointer;
-  padding: 10px 15px;
-}
-header .container .row .main-box .menu-btn .menubar ul li a {
-  text-transform: capitalize;
-  font-weight: bold;
-  color: white;
-  font-size: 18px;
-}
-header .container .row .main-box .menu-btn .btn {
-  padding-left: 15px;
-}
-header .container .row .main-box .menu-btn .btn a {
-  display: inline-block;
-  text-transform: uppercase;
-  padding: 15px 28px;
-  color: white;
-  font-weight: bold;
-  background-color: #064621;
-  border-radius: 6px;
-  font-size: 15px;
-}
-header .container .row .main-box .menu-btn .menu-icon {
-  display: none;
-  width: 30px;
-}
-header .container .row .main-box .menu-btn .menu-icon span {
-  display: block;
-  height: 2px;
-  width: 23px;
-  border-radius: 99px;
-  background: #fff;
-  transition: 0.3s ease;
-  transform-origin: left;
-}
-header .container .row .main-box .menu-btn .menu-icon.active span:nth-child(1) {
-  transform: rotate(45deg);
-}
-header .container .row .main-box .menu-btn .menu-icon.active span:nth-child(2) {
-  transform: scale(0);
-}
-header .container .row .main-box .menu-btn .menu-icon.active span:nth-child(3) {
-  transform: rotate(-45deg);
-}
-
 .slider-section {
   position: relative;
   margin-top: -260px;
   overflow: hidden;
+  z-index: -1;
 }
 .slider-section::after {
   position: absolute;
@@ -725,14 +587,17 @@ header .container .row .main-box .menu-btn .menu-icon.active span:nth-child(3) {
   }
 }
 .pulse:nth-child(1) {
+  -webkit-animation: pulses 2s infinite 0.3s;
   animation: pulses 2s infinite;
 }
 
 .pulse:nth-child(2) {
+  -webkit-animation: pulses 2s infinite 0.3s;
   animation: pulses 2s infinite 0.3s;
 }
 
 .pulse:nth-child(3) {
+  -webkit-animation: pulses 2s infinite 0.3s;
   animation: pulses 2s infinite 0.6s;
 }
 
@@ -753,6 +618,8 @@ header .container .row .main-box .menu-btn .menu-icon.active span:nth-child(3) {
   width: 70px;
   line-height: 70px;
   cursor: pointer;
+  -webkit-transition: all 0.2s;
+  -moz-transition: all 0.2s;
   transition: all 0.2s;
 }
 .watsapp-join a {
@@ -929,123 +796,7 @@ header .container .row .main-box .menu-btn .menu-icon.active span:nth-child(3) {
   transform: skewX(45deg) scale(1);
 }
 
-footer .main-footer {
-  position: relative;
-  padding: 120px 0px;
-  background-position: center;
-  background-size: cover;
-  background-attachment: fixed;
-  background-blend-mode: darken;
-  background-color: rgba(0, 0, 0, 0.4392156863);
-}
-footer .main-footer .container .row .main-box {
-  position: relative;
-  color: white;
-}
-footer .main-footer .container .row .main-box .box {
-  width: 33%;
-  padding: 0px 15px;
-}
-footer .main-footer .container .row .main-box .box .main-heading {
-  padding-bottom: 18px;
-}
-footer .main-footer .container .row .main-box .box .main-heading h2 {
-  font-size: 28px;
-}
-footer .main-footer .container .row .main-box .box .content {
-  padding-top: 7px;
-}
-footer .main-footer .container .row .main-box .box .content ul li {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  gap: 25px;
-  padding-bottom: 25px;
-}
-footer .main-footer .container .row .main-box .box .content ul li .icon {
-  width: 28px;
-}
-footer .main-footer .container .row .main-box .box .content ul li .icon img {
-  display: block;
-  width: 100%;
-  height: 100%;
-}
-footer .main-footer .container .row .main-box .box .content ul li .detail {
-  color: white;
-  line-height: 1.5;
-}
-footer .main-footer .container .row .main-box .box .content ul li .detail span {
-  font-weight: 700;
-  font-size: 18px;
-  text-transform: capitalize;
-}
-footer .main-footer .container .row .main-box .box .content ul li .detail p {
-  display: block;
-  color: white;
-}
-footer .main-footer .container .row .main-box .box .content ul li a {
-  font-size: 18px;
-  color: white;
-  font-weight: 700;
-}
-footer .main-footer .container .row .main-box .box .social-media {
-  gap: 15px;
-}
-footer .main-footer .container .row .main-box .box .social-media a {
-  display: block;
-  font-size: 20px;
-  color: white;
-}
-footer .main-footer .container .row .main-box .box .gallery-box ul {
-  display: flex;
-  flex-wrap: wrap;
-}
-footer .main-footer .container .row .main-box .box .gallery-box ul li {
-  width: 27%;
-}
-footer .main-footer .container .row .main-box .box .gallery-box ul li a {
-  display: block;
-  width: 94%;
-  height: 85px;
-  padding-top: 7px;
-}
-footer .main-footer .container .row .main-box .box .gallery-box ul li a img {
-  width: 100%;
-  height: 100%;
-}
-footer .sub-footer-curve {
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 50%;
-  background-color: #006e2f;
-  background: rgb(6, 70, 33);
-  background: linear-gradient(135deg, #131418 0%, #1A7759 100%);
-  height: 52px;
-  margin-top: -52px;
-  color: white;
-  z-index: 2;
-  font-weight: 700;
-}
-footer .sub-footer-curve::after {
-  position: absolute;
-  content: "";
-  background-color: #196e53;
-  height: 52px;
-  width: 40px;
-  right: -25px;
-  top: 0px;
-  transform: skewX(30deg);
-}
-footer .sub-footer-curve p {
-  text-transform: capitalize;
-}
-
 @media (max-width: 1399px) {
-  header .row .logo-menu {
-    padding: 30px 15px;
-  }
   .work-process-section .container .row .main-box .box .content .icon .image {
     width: 60%;
   }
@@ -1062,54 +813,8 @@ footer .sub-footer-curve p {
   .work-process-section .container .row .main-box .box .content .icon .image {
     width: 75%;
   }
-  footer .main-footer .container .row .main-box .box .gallery-box ul li {
-    width: 30%;
-  }
 }
 @media (max-width: 991px) {
-  header {
-    position: relative;
-    padding: 15px 0px;
-  }
-  header .container .row .main-box .menu-btn {
-    gap: 30px;
-  }
-  header .container .row .main-box .menu-btn .menubar {
-    position: absolute;
-    top: 130px;
-    left: 0px;
-    background-color: white;
-    width: 100%;
-    transform: translate(-100%);
-    opacity: 0;
-    transition: all 0.5s;
-  }
-  header .container .row .main-box .menu-btn .menubar ul {
-    width: 100%;
-  }
-  header .container .row .main-box .menu-btn .menubar ul li {
-    width: 100%;
-    border-top: 1px solid #dddddd;
-    padding: 15px;
-  }
-  header .container .row .main-box .menu-btn .menubar ul li a {
-    color: #575250;
-    font-weight: 100;
-    font-size: 16px;
-  }
-  header .container .row .main-box .menu-btn .menubar.active {
-    transform: translate(0);
-    opacity: 1;
-  }
-  header .container .row .main-box .menu-btn .menu-icon {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 6px;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    font-size: 20px;
-  }
   .slider-section .main-slider .single-hs-item .slide-content .detail h1 {
     font-size: 40px;
   }
@@ -1150,18 +855,6 @@ footer .sub-footer-curve p {
   .contact-us-section .container .row .main-box .box-2 {
     width: 85%;
     margin: 0px auto;
-  }
-  footer .main-footer .container .row .main-box {
-    gap: 30px;
-  }
-  footer .main-footer .container .row .main-box .box {
-    width: 45%;
-  }
-  footer .main-footer .container .row .main-box .box:last-child {
-    width: 42%;
-  }
-  footer .main-footer .container .row .main-box .box .gallery-box ul li a {
-    padding-top: 5px;
   }
 }
 @media (max-width: 767px) {
@@ -1240,56 +933,10 @@ footer .sub-footer-curve p {
   .contact-us-section .container .row .main-box .box-2 {
     width: 100%;
   }
-  footer .footer-curve {
-    height: 22px;
-    margin: 0 auto -22px;
-  }
-  footer .main-footer .container .row .main-box {
-    gap: 25px;
-  }
-  footer .main-footer .container .row .main-box .box {
-    width: 100%;
-  }
-  footer .main-footer .container .row .main-box .box:last-child {
-    width: 55%;
-  }
-  footer .main-footer .container .row .main-box .box .main-heading h2 {
-    font-size: 24px;
-  }
-  footer .main-footer .container .row .main-box .box .content ul li {
-    padding-bottom: 15px;
-    gap: 20px;
-  }
-  footer .main-footer .container .row .main-box .box .content ul li .icon {
-    font-size: 22px;
-  }
-  footer .main-footer .container .row .main-box .box .content ul li .detail span {
-    font-size: 16px;
-  }
-  footer .main-footer .container .row .main-box .box .content ul li .detail a {
-    font-size: 16px;
-  }
-  footer .main-footer .container .row .main-box .box .gallery-box ul {
-    gap: 8px;
-  }
-  footer .main-footer .container .row .main-box .box .gallery-box ul li {
-    width: 95px;
-    height: 85px;
-  }
-  footer .main-footer .container .row .main-box .box .gallery-box ul li a {
-    width: 100%;
-    padding-top: 0px;
-  }
-  footer .sub-footer-curve {
-    width: 70%;
-  }
 }
 @media (max-width: 670px) {
   .industry-section .container .row .main-box .box {
     width: 30%;
-  }
-  footer .main-footer .container .row .main-box .box:nth-child(3) {
-    width: 64%;
   }
 }
 @media (max-width: 575px) {
@@ -1323,24 +970,10 @@ footer .sub-footer-curve p {
   .contact-us-section .container .row .main-box .box-2 .content form .user-product input:nth-child(1) {
     margin-bottom: 12px;
   }
-  footer .sub-footer-curve {
-    width: 100%;
-    padding: 0px 15px;
-    text-align: center;
-  }
-  footer .sub-footer-curve::after {
-    display: none;
-  }
-  footer .main-footer .container .row .main-box .box:last-child {
-    width: 75%;
-  }
 }
 @media (max-width: 470px) {
   .work-process-section .container .row .main-box .box .content .icon .image {
     width: 80%;
-  }
-  footer .main-footer .container .row .main-box .box:last-child {
-    width: 93%;
   }
 }
 @media (max-width: 420px) {
@@ -1359,15 +992,6 @@ footer .sub-footer-curve p {
     width: 50%;
   }
   .work-process-section .container .row .main-box .box .content .icon .image {
-    width: 100%;
-  }
-  footer .sub-footer-curve {
-    width: 100%;
-  }
-  footer .sub-footer-curve::after {
-    display: none;
-  }
-  footer .main-footer .container .row .main-box .box:last-child {
     width: 100%;
   }
 }
@@ -1413,9 +1037,6 @@ footer .sub-footer-curve p {
   .contact-us-section .container .row .main-box .box-1 .content .info ul li {
     gap: 10px;
   }
-  footer .main-footer .container .row .main-box .box .gallery-box ul li {
-    width: 90px;
-  }
 }
 @media (max-width: 320px) {
   .industry-section .container .row .main-box .box {
@@ -1426,4 +1047,4 @@ footer .sub-footer-curve p {
   .work-process-section .container .row .main-box .box {
     width: 75%;
   }
-}/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=homepage.css.map */
