--- a/assets/css/vegetable.css
+++ b/assets/css/vegetable.css
@@ -5,12 +5,13 @@
 }
 
 .vegetable-section {
-  padding: 60px 0px;
+  padding-bottom: 60px;
 }
 .vegetable-section .container .row .main-heading {
   padding: 0px 15px;
 }
 .vegetable-section .container .row .main-heading h2 {
+  width: -moz-fit-content;
   width: fit-content;
   text-align: center;
   font-size: 100px;
@@ -19,6 +20,7 @@
   position: relative;
   cursor: pointer;
   font-family: emoji;
+  margin: 30px 0px !important;
 }
 .vegetable-section .container .row .main-heading h2::before {
   position: absolute;
@@ -38,10 +40,15 @@
   padding: 15px;
 }
 .vegetable-section .container .row .main-box .box .content {
-  padding: 15px;
+  height: 100%;
+}
+.vegetable-section .container .row .main-box .box .content .image {
+  overflow: hidden;
 }
 .vegetable-section .container .row .main-box .box .content .image img {
+  display: block;
   width: 100%;
+  transition: all 0.5s;
 }
 .vegetable-section .container .row .main-box .box .content .detail {
   text-align: center;
@@ -60,155 +67,44 @@
   line-height: 1.5;
   color: #666666;
 }
+.vegetable-section .container .row .main-box .box .content:hover .image img {
+  transform: scale(1.1);
+}
 
-@media (max-width: 1399px) {
-  header .row .logo-menu {
-    padding: 30px 15px;
+@media (max-width: 1560px) {
+  .vegetable-section .container .row .main-box .box .content {
+    padding: 0px;
   }
 }
-@media (max-width: 1199px) {
-  footer .main-footer .container .row .main-box .box .gallery-box ul li {
-    width: 30%;
+@media (max-width: 1399px) {
+  .vegetable-section .container .row .main-box .box {
+    width: 20%;
+  }
+  .vegetable-section .container .row .main-box .box .content {
+    padding: 0px;
   }
 }
 @media (max-width: 991px) {
-  header {
-    position: relative;
-    padding: 15px 0px;
-  }
-  header .container .row .main-box .menu-btn {
-    gap: 30px;
-  }
   header .container .row .main-box .menu-btn .menubar {
-    position: absolute;
-    top: 130px;
-    left: 0px;
-    background-color: white;
-    width: 100%;
-    transform: translate(-100%);
-    opacity: 0;
-    transition: all 0.5s;
+    top: 110px;
   }
-  header .container .row .main-box .menu-btn .menubar ul {
-    width: 100%;
+  .vegetable-section .container .row .main-box .box {
+    width: 25%;
   }
-  header .container .row .main-box .menu-btn .menubar ul li {
-    width: 100%;
-    border-top: 1px solid #dddddd;
-    padding: 15px;
-  }
-  header .container .row .main-box .menu-btn .menubar ul li a {
-    color: #575250;
-    font-weight: 100;
-    font-size: 16px;
-  }
-  header .container .row .main-box .menu-btn .menubar.active {
-    transform: translate(0);
-    opacity: 1;
-  }
-  header .container .row .main-box .menu-btn .menu-icon {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 6px;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    font-size: 20px;
-  }
-  footer .main-footer .container .row .main-box {
-    gap: 30px;
-  }
-  footer .main-footer .container .row .main-box .box {
-    width: 45%;
-  }
-  footer .main-footer .container .row .main-box .box:last-child {
-    width: 42%;
-  }
-  footer .main-footer .container .row .main-box .box .gallery-box ul li a {
-    padding-top: 5px;
+  .vegetable-section .container .row .main-box .box .content {
+    padding: 0px;
   }
 }
 @media (max-width: 767px) {
-  footer .footer-curve {
-    height: 22px;
-    margin: 0 auto -22px;
-  }
-  footer .main-footer .container .row .main-box {
-    gap: 25px;
-  }
-  footer .main-footer .container .row .main-box .box {
-    width: 100%;
-  }
-  footer .main-footer .container .row .main-box .box:last-child {
-    width: 55%;
-  }
-  footer .main-footer .container .row .main-box .box .main-heading h2 {
-    font-size: 24px;
-  }
-  footer .main-footer .container .row .main-box .box .content ul li {
-    padding-bottom: 15px;
-    gap: 20px;
-  }
-  footer .main-footer .container .row .main-box .box .content ul li .icon {
-    font-size: 22px;
-  }
-  footer .main-footer .container .row .main-box .box .content ul li .detail span {
-    font-size: 16px;
-  }
-  footer .main-footer .container .row .main-box .box .content ul li .detail a {
-    font-size: 16px;
-  }
-  footer .main-footer .container .row .main-box .box .gallery-box ul {
-    gap: 8px;
-  }
-  footer .main-footer .container .row .main-box .box .gallery-box ul li {
-    width: 95px;
-    height: 85px;
-  }
-  footer .main-footer .container .row .main-box .box .gallery-box ul li a {
-    width: 100%;
-    padding-top: 0px;
-  }
-  footer .sub-footer-curve {
-    width: 70%;
-  }
-}
-@media (max-width: 670px) {
-  footer .main-footer .container .row .main-box .box:nth-child(3) {
-    width: 64%;
+  .vegetable-section .container .row .main-box .box {
+    width: 33.33%;
   }
 }
 @media (max-width: 575px) {
-  footer .sub-footer-curve {
-    width: 100%;
-    padding: 0px 15px;
-    text-align: center;
+  .vegetable-section .container .row .main-heading h2 {
+    font-size: 70px;
   }
-  footer .sub-footer-curve::after {
-    display: none;
-  }
-  footer .main-footer .container .row .main-box .box:last-child {
-    width: 75%;
-  }
-}
-@media (max-width: 470px) {
-  footer .main-footer .container .row .main-box .box:last-child {
-    width: 93%;
-  }
-}
-@media (max-width: 420px) {
-  footer .sub-footer-curve {
-    width: 100%;
-  }
-  footer .sub-footer-curve::after {
-    display: none;
-  }
-  footer .main-footer .container .row .main-box .box:last-child {
-    width: 100%;
-  }
-}
-@media (max-width: 390px) {
-  footer .main-footer .container .row .main-box .box .gallery-box ul li {
-    width: 90px;
+  .vegetable-section .container .row .main-box .box {
+    width: 50%;
   }
 }/*# sourceMappingURL=vegetable.css.map */
