--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -65,15 +65,15 @@ h2 {
 }
 
 .after::after {
-  transform: translate(-100%);
+  transform: translate(0%) !important;
 }
 
-header {
+#main-header {
   position: relative;
   z-index: 1;
   padding-top: 40px;
 }
-header::after {
+#main-header::after {
   position: absolute;
   content: "";
   top: 0px;
@@ -81,40 +81,40 @@ header::after {
   background-color: orangered;
   width: 30%;
   height: 100%;
-  -webkit-clip-path: polygon(0 0, 100% 0, calc(100% - 75px) 100%, 0% 100%);
-          clip-path: polygon(0 0, 100% 0, calc(100% - 75px) 100%, 0% 100%);
+  clip-path: polygon(0 0, 100% 0, calc(100% - 75px) 100%, 0% 100%);
   z-index: -1;
   transition: all 0.5s;
   opacity: 1;
+  transform: translate(-100%);
 }
-header .container .row .main-box {
+#main-header .container .row .main-box {
   padding: 0px 15px;
 }
-header .container .row .main-box .logo {
+#main-header .container .row .main-box .logo {
   width: 140px;
 }
-header .container .row .main-box .logo a {
+#main-header .container .row .main-box .logo a {
   display: block;
   width: 100%;
 }
-header .container .row .main-box .logo a img {
+#main-header .container .row .main-box .logo a img {
   width: 100%;
 }
-header .container .row .main-box .menu-btn {
+#main-header .container .row .main-box .menu-btn {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
 }
-header .container .row .main-box .menu-btn .menubar ul {
+#main-header .container .row .main-box .menu-btn .menubar ul {
   display: flex;
   flex-wrap: wrap;
 }
-header .container .row .main-box .menu-btn .menubar ul li {
+#main-header .container .row .main-box .menu-btn .menubar ul li {
   position: relative;
   display: flex;
   align-items: center;
 }
-header .container .row .main-box .menu-btn .menubar ul li a {
+#main-header .container .row .main-box .menu-btn .menubar ul li a {
   display: flex;
   align-items: center;
   padding: 10px 15px;
@@ -124,13 +124,13 @@ header .container .row .main-box .menu-btn .menubar ul li a {
   font-size: 18px;
   text-transform: capitalize;
 }
-header .container .row .main-box .menu-btn .menubar ul li:hover a {
+#main-header .container .row .main-box .menu-btn .menubar ul li:hover a {
   color: yellow;
 }
-header .container .row .main-box .menu-btn .btn {
+#main-header .container .row .main-box .menu-btn .btn {
   padding-left: 15px;
 }
-header .container .row .main-box .menu-btn .btn a {
+#main-header .container .row .main-box .menu-btn .btn a {
   position: relative;
   display: inline-block;
   overflow: hidden;
@@ -144,7 +144,7 @@ header .container .row .main-box .menu-btn .btn a {
   border-radius: 6px;
   font-size: 15px;
 }
-header .container .row .main-box .menu-btn .btn a::after {
+#main-header .container .row .main-box .menu-btn .btn a::after {
   position: absolute;
   content: "";
   box-sizing: border-box;
@@ -158,17 +158,17 @@ header .container .row .main-box .menu-btn .btn a::after {
   transform: skewX(45deg) scaleX(0);
   transition: all 0.5s;
 }
-header .container .row .main-box .menu-btn .btn a:hover {
+#main-header .container .row .main-box .menu-btn .btn a:hover {
   color: black;
 }
-header .container .row .main-box .menu-btn .btn a:hover::after {
+#main-header .container .row .main-box .menu-btn .btn a:hover::after {
   transform: skewX(45deg) scale(1);
 }
-header .container .row .main-box .menu-btn .menu-icon {
+#main-header .container .row .main-box .menu-btn .menu-icon {
   display: none;
   width: 30px;
 }
-header .container .row .main-box .menu-btn .menu-icon span {
+#main-header .container .row .main-box .menu-btn .menu-icon span {
   display: block;
   height: 2px;
   width: 23px;
@@ -177,13 +177,13 @@ header .container .row .main-box .menu-btn .menu-icon span {
   transition: 0.3s ease;
   transform-origin: left;
 }
-header .container .row .main-box .menu-btn .menu-icon.active span:nth-child(1) {
+#main-header .container .row .main-box .menu-btn .menu-icon.active span:nth-child(1) {
   transform: rotate(45deg);
 }
-header .container .row .main-box .menu-btn .menu-icon.active span:nth-child(2) {
+#main-header .container .row .main-box .menu-btn .menu-icon.active span:nth-child(2) {
   transform: scale(0);
 }
-header .container .row .main-box .menu-btn .menu-icon.active span:nth-child(3) {
+#main-header .container .row .main-box .menu-btn .menu-icon.active span:nth-child(3) {
   transform: rotate(-45deg);
 }
 
@@ -301,7 +301,7 @@ footer .sub-footer-curve p {
 }
 
 @media (max-width: 1399px) {
-  header .row .logo-menu {
+  #main-header .row .logo-menu {
     padding: 30px 15px;
   }
 }
@@ -311,14 +311,14 @@ footer .sub-footer-curve p {
   }
 }
 @media (max-width: 991px) {
-  header {
+  #main-header {
     position: relative;
     padding: 15px 0px;
   }
-  header .container .row .main-box .menu-btn {
+  #main-header .container .row .main-box .menu-btn {
     gap: 30px;
   }
-  header .container .row .main-box .menu-btn .menubar {
+  #main-header .container .row .main-box .menu-btn .menubar {
     position: absolute;
     top: 130px;
     left: 0px;
@@ -328,23 +328,23 @@ footer .sub-footer-curve p {
     opacity: 0;
     transition: all 0.5s;
   }
-  header .container .row .main-box .menu-btn .menubar ul {
+  #main-header .container .row .main-box .menu-btn .menubar ul {
     width: 100%;
   }
-  header .container .row .main-box .menu-btn .menubar ul li {
+  #main-header .container .row .main-box .menu-btn .menubar ul li {
     display: block;
     width: 100%;
     border-top: 1px solid #dddddd;
     padding: 0px;
   }
-  header .container .row .main-box .menu-btn .menubar ul li a {
+  #main-header .container .row .main-box .menu-btn .menubar ul li a {
     display: block;
     color: #575250;
     font-weight: 100;
     font-size: 16px;
     padding: 15px;
   }
-  header .container .row .main-box .menu-btn .menubar ul li .submenu {
+  #main-header .container .row .main-box .menu-btn .menubar ul li .submenu {
     position: relative;
     width: 100%;
     min-width: 215px;
@@ -356,11 +356,11 @@ footer .sub-footer-curve p {
     visibility: visible;
     border-top: 5px solid #006e2f;
   }
-  header .container .row .main-box .menu-btn .menubar.active {
+  #main-header .container .row .main-box .menu-btn .menubar.active {
     transform: translate(0);
     opacity: 1;
   }
-  header .container .row .main-box .menu-btn .menu-icon {
+  #main-header .container .row .main-box .menu-btn .menu-icon {
     display: flex;
     flex-wrap: wrap;
     gap: 6px;
